-- Database Schema Dump
-- Generated by Antigravity

CREATE TABLE "addresses" ("id" integer primary key autoincrement not null, "user_id" integer not null, "recipient_name" varchar not null, "phone" varchar not null, "city" varchar not null, "district" varchar not null, "zip_code" varchar not null, "detail_address" varchar not null, "is_default" tinyint(1) not null default '0', "created_at" datetime, "updated_at" datetime, "deleted_at" datetime, foreign key("user_id") references "users"("id") on delete cascade);

CREATE TABLE "cache" ("key" varchar not null, "value" text not null, "expiration" integer not null, primary key ("key"));

CREATE TABLE "cache_locks" ("key" varchar not null, "owner" varchar not null, "expiration" integer not null, primary key ("key"));

CREATE TABLE "cart_items" ("id" integer primary key autoincrement not null, "cart_id" integer not null, "product_id" integer not null, "quantity" integer not null default '1', "created_at" datetime, "updated_at" datetime, foreign key("cart_id") references "carts"("id") on delete cascade, foreign key("product_id") references "products"("id") on delete cascade);

CREATE TABLE "carts" ("id" integer primary key autoincrement not null, "user_id" integer not null, "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade);

CREATE TABLE "coupons" ("id" integer primary key autoincrement not null, "code" varchar not null, "discount_amount" numeric not null, "limit_price" numeric, "type" varchar not null default 'fixed', "starts_at" datetime, "ends_at" datetime, "created_at" datetime, "updated_at" datetime);

CREATE TABLE "failed_jobs" ("id" integer primary key autoincrement not null, "uuid" varchar not null, "connection" text not null, "queue" text not null, "payload" text not null, "exception" text not null, "failed_at" datetime not null default CURRENT_TIMESTAMP);

CREATE TABLE "favorites" ("id" integer primary key autoincrement not null, "user_id" integer not null, "product_id" integer not null, "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade, foreign key("product_id") references "products"("id") on delete cascade);

CREATE TABLE "job_batches" ("id" varchar not null, "name" varchar not null, "total_jobs" integer not null, "pending_jobs" integer not null, "failed_jobs" integer not null, "failed_job_ids" text not null, "options" text, "cancelled_at" integer, "created_at" integer not null, "finished_at" integer, primary key ("id"));

CREATE TABLE "jobs" ("id" integer primary key autoincrement not null, "queue" varchar not null, "payload" text not null, "attempts" integer not null, "reserved_at" integer, "available_at" integer not null, "created_at" integer not null);

CREATE TABLE "migrations" ("id" integer primary key autoincrement not null, "migration" varchar not null, "batch" integer not null);

CREATE TABLE "order_items" ("id" integer primary key autoincrement not null, "order_id" integer not null, "product_id" integer not null, "quantity" integer not null, "price" numeric not null, "created_at" datetime, "updated_at" datetime, foreign key("order_id") references "orders"("id") on delete cascade, foreign key("product_id") references "products"("id") on delete cascade);

CREATE TABLE "orders" ("id" integer primary key autoincrement not null, "user_id" integer not null, "status" varchar not null default 'pending_payment', "total_amount" numeric not null, "created_at" datetime, "updated_at" datetime, "snapshot_data" text, "discount_amount" numeric not null default '0', "logistics_number" varchar, "payment_method" varchar not null default 'wallet', "deleted_at" datetime, "shipping_fee" numeric not null default '0', foreign key("user_id") references "users"("id") on delete cascade);

CREATE TABLE "password_reset_tokens" ("email" varchar not null, "token" varchar not null, "created_at" datetime, primary key ("email"));

CREATE TABLE "personal_access_tokens" ("id" integer primary key autoincrement not null, "tokenable_type" varchar not null, "tokenable_id" integer not null, "name" text not null, "token" varchar not null, "abilities" text, "last_used_at" datetime, "expires_at" datetime, "created_at" datetime, "updated_at" datetime);

CREATE TABLE "products" ("id" integer primary key autoincrement not null, "name" varchar not null, "price" numeric not null, "information" text, "image" varchar, "category" varchar not null, "status" varchar not null default 'active', "stock" integer not null default '0', "store_id" integer not null, "created_at" datetime, "updated_at" datetime, "original_price" numeric, "deleted_at" datetime, foreign key("store_id") references "stores"("id") on delete cascade);

CREATE TABLE "sales" ("id" integer primary key autoincrement not null, "product_id" integer not null, "amount" numeric not null, "sold_at" datetime not null, "created_at" datetime, "updated_at" datetime, foreign key("product_id") references "products"("id") on delete cascade);

CREATE TABLE "sessions" ("id" varchar not null, "user_id" integer, "ip_address" varchar, "user_agent" text, "payload" text not null, "last_activity" integer not null, primary key ("id"));

CREATE TABLE "settings" ("id" integer primary key autoincrement not null, "key" varchar not null, "value" text, "description" varchar, "created_at" datetime, "updated_at" datetime);

CREATE TABLE "special_events" ("id" integer primary key autoincrement not null, "name" varchar not null, "discount_rate" numeric not null, "starts_at" datetime, "ends_at" datetime, "created_at" datetime, "updated_at" datetime);

CREATE TABLE "stores" ("id" integer primary key autoincrement not null, "name" varchar not null, "email" varchar not null, "address" text not null, "phone" varchar not null, "created_at" datetime, "updated_at" datetime);

CREATE TABLE "users" ("id" integer primary key autoincrement not null, "name" varchar not null, "email" varchar not null, "email_verified_at" datetime, "password" varchar not null, "remember_token" varchar, "created_at" datetime, "updated_at" datetime, "role" varchar not null default 'customer', "phone" varchar, "address" text, "birthday" date, "store_id" integer, "status" varchar not null default 'active', "balance" numeric not null default '0', "member_level" varchar not null default 'normal', "is_level_locked" tinyint(1) not null default '0', "deleted_at" datetime, foreign key("store_id") references "stores"("id") on delete set null);

CREATE TABLE "wallet_transactions" ("id" integer primary key autoincrement not null, "user_id" integer not null, "type" varchar not null, "amount" numeric not null, "reference_id" varchar, "description" varchar, "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade);

