// DBML generated by Antigravity v2
Project MrXieStore {
  database_type: 'SQLite'
  Note: 'Generated from production schema'
}

Table addresses {
  id integer [pk, increment, not null]
  user_id integer [not null]
  recipient_name varchar [not null]
  phone varchar [not null]
  city varchar [not null]
  district varchar [not null]
  zip_code varchar [not null]
  detail_address varchar [not null]
  is_default tinyint(1) [not null, default: 0]
  created_at datetime
  updated_at datetime
  deleted_at datetime
}

Table cache {
  key varchar [not null, pk]
  value text [not null]
  expiration integer [not null]
}

Table cache_locks {
  key varchar [not null, pk]
  owner varchar [not null]
  expiration integer [not null]
}

Table cart_items {
  id integer [pk, increment, not null]
  cart_id integer [not null]
  product_id integer [not null]
  quantity integer [not null, default: 1]
  created_at datetime
  updated_at datetime
}

Table carts {
  id integer [pk, increment, not null]
  user_id integer [not null]
  created_at datetime
  updated_at datetime
}

Table coupons {
  id integer [pk, increment, not null]
  code varchar [not null]
  discount_amount numeric [not null]
  limit_price numeric
  type varchar [not null, default: 'fixed']
  starts_at datetime
  ends_at datetime
  created_at datetime
  updated_at datetime
}

Table failed_jobs {
  id integer [pk, increment, not null]
  uuid varchar [not null]
  connection text [not null]
  queue text [not null]
  payload text [not null]
  exception text [not null]
  failed_at datetime [not null, default: `now()`]
}

Table favorites {
  id integer [pk, increment, not null]
  user_id integer [not null]
  product_id integer [not null]
  created_at datetime
  updated_at datetime
}

Table job_batches {
  id varchar [not null, pk]
  name varchar [not null]
  total_jobs integer [not null]
  pending_jobs integer [not null]
  failed_jobs integer [not null]
  failed_job_ids text [not null]
  options text
  cancelled_at integer
  created_at integer [not null]
  finished_at integer
}

Table jobs {
  id integer [pk, increment, not null]
  queue varchar [not null]
  payload text [not null]
  attempts integer [not null]
  reserved_at integer
  available_at integer [not null]
  created_at integer [not null]
}

Table migrations {
  id integer [pk, increment, not null]
  migration varchar [not null]
  batch integer [not null]
}

Table order_items {
  id integer [pk, increment, not null]
  order_id integer [not null]
  product_id integer [not null]
  quantity integer [not null]
  price numeric [not null]
  created_at datetime
  updated_at datetime
}

Table orders {
  id integer [pk, increment, not null]
  user_id integer [not null]
  status varchar [not null, default: 'pending_payment']
  total_amount numeric [not null]
  created_at datetime
  updated_at datetime
  snapshot_data text
  discount_amount numeric [not null, default: 0]
  logistics_number varchar
  payment_method varchar [not null, default: 'wallet']
  deleted_at datetime
  shipping_fee numeric [not null, default: 0]
}

Table password_reset_tokens {
  email varchar [not null, pk]
  token varchar [not null]
  created_at datetime
}

Table personal_access_tokens {
  id integer [pk, increment, not null]
  tokenable_type varchar [not null]
  tokenable_id integer [not null]
  name text [not null]
  token varchar [not null]
  abilities text
  last_used_at datetime
  expires_at datetime
  created_at datetime
  updated_at datetime
}

Table products {
  id integer [pk, increment, not null]
  name varchar [not null]
  price numeric [not null]
  information text
  image varchar
  category varchar [not null]
  status varchar [not null, default: 'active']
  stock integer [not null, default: 0]
  store_id integer [not null]
  created_at datetime
  updated_at datetime
  original_price numeric
  deleted_at datetime
}

Table sales {
  id integer [pk, increment, not null]
  product_id integer [not null]
  amount numeric [not null]
  sold_at datetime [not null]
  created_at datetime
  updated_at datetime
}

Table sessions {
  id varchar [not null, pk]
  user_id integer
  ip_address varchar
  user_agent text
  payload text [not null]
  last_activity integer [not null]
}

Table settings {
  id integer [pk, increment, not null]
  key varchar [not null]
  value text
  description varchar
  created_at datetime
  updated_at datetime
}

Table special_events {
  id integer [pk, increment, not null]
  name varchar [not null]
  discount_rate numeric [not null]
  starts_at datetime
  ends_at datetime
  created_at datetime
  updated_at datetime
}

Table stores {
  id integer [pk, increment, not null]
  name varchar [not null]
  email varchar [not null]
  address text [not null]
  phone varchar [not null]
  created_at datetime
  updated_at datetime
}

Table users {
  id integer [pk, increment, not null]
  name varchar [not null]
  email varchar [not null]
  email_verified_at datetime
  password varchar [not null]
  remember_token varchar
  created_at datetime
  updated_at datetime
  role varchar [not null, default: 'customer']
  phone varchar
  address text
  birthday date
  store_id integer
  status varchar [not null, default: 'active']
  balance numeric [not null, default: 0]
  member_level varchar [not null, default: 'normal']
  is_level_locked tinyint(1) [not null, default: 0]
  deleted_at datetime
}

Table wallet_transactions {
  id integer [pk, increment, not null]
  user_id integer [not null]
  type varchar [not null]
  amount numeric [not null]
  reference_id varchar
  description varchar
  created_at datetime
  updated_at datetime
}

Ref: addresses.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.product_id > products.id
Ref: carts.user_id > users.id
Ref: favorites.user_id > users.id
Ref: favorites.product_id > products.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: orders.user_id > users.id
Ref: products.store_id > stores.id
Ref: sales.product_id > products.id
Ref: users.store_id > stores.id
Ref: wallet_transactions.user_id > users.id
